--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         <div class="card card-testimonial text-center">
                             <div class="testimonial-content">
                                 <img src="frontend/images/user pic@2x.png" alt="User" class="mb-4 rounded-circle">
-                                <h3 class="mb-4">Angga Risky</h3>
+                                <h3 class="mb-4">Abu Dzar</h3>
                                 <p class="testimonial">
                                     “ It was glorious and I could not stop to say wohooo for every single moment Suwun Hahaha “
                                 </p>
@@ -202,7 +202,7 @@
                         <div class="card card-testimonial text-center">
                             <div class="testimonial-content">
                                 <img src="frontend/images/Testimoni-2.jpg" alt="User" class="mb-4 rounded-circle">
-                                <h3 class="mb-4">Shayna</h3>
+                                <h3 class="mb-4">Celia</h3>
                                 <p class="testimonial">
                                     “ The trip was amazing and I saw something beautiful in that Island that makes me want to learn more “
                                 </p>
@@ -267,7 +267,7 @@
                                 <li><a href="#">Carrer</a></li>
                                 <li><a href="#">Help Center</a></li>
                                 <li><a href="#">Media</a></li>
-                            </ul>s
+                            </ul>
                         </div>
                         <div class="col-12 col-lg-3">
                             <h5>GET CONNECTED</h5>
